animation.js and slide.js

--- a/Mallan_test/slideup.html
+++ b/Mallan_test/slideup.html
@@ -8,8 +8,6 @@
 		<title>slideup</title>
 		<meta name="description" content="" />
 		<meta name="author" content="allanma" />
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<style>
@@ -20,10 +18,13 @@
 			}
 		</style>
 		<script type="text/javascript" src="../Mallan.js"></script>
-		<script type="text/javascript" src="../dom/Selector.js"></script>
-		<script type="text/javascript" src="../dom/mallan.js"></script>
-		<script type="text/javascript" src="../dom/mallan/Style.js"></script>
-		<script type="text/javascript" src="../animation/slideup.js"></script>
+		<script type="text/javascript" src="../lang/array.js"></script>
+		<script type="text/javascript" src="../dom/selector.js"></script>
+		<script type="text/javascript" src="../dom/element.js"></script>
+		<script type="text/javascript" src="../dom/element/style.js"></script>
+		<script type="text/javascript" src="../events/customevent.js"></script>
+		<script type="text/javascript" src="../animation/animate.js"></script>
+		<script type="text/javascript" src="../animation/slide.js"></script>
 	</head>
 	<body>
 		<div>打发打发打发东莞市分公司的公司股份未感染股份公司打发发给施工方撒旦法ads发噶撒旦法阿萨德gas</div>
