--- a/Mallan_test/test_mallan.html
+++ b/Mallan_test/test_mallan.html
@@ -4,10 +4,6 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Untitled Document</title>
 		<script type="text/javascript" src="../Mallan.js"></script>
-		<script type="text/javascript" src="../dom/Selector.js"></script>
-		<script type="text/javascript" src="../dom/mallan.js"></script>
-		<script type="text/javascript" src="../dom/mallan/Node.js"></script>
-		<script type="text/javascript" src="../dom/mallan/Style.js"></script>
 	</head>
 	<style>
 		div{width:100px; height:100px;}
@@ -20,10 +16,18 @@
 		<div class="c">4</div>
 		
 		<script type="text/javascript">
-		//	$('div:last').prev().css('color','red')
-	//	$('div').append("<a href='2'>33</a>")
-		//$(".c").appendTo($("div")[0])
-		$('div').html('1')
+			$.require('dom.element.style,animation.animate,events.event',function(){
+			    console.log($.getLoadedModule(),1)
+			});
+			$.require('lang.interface',function(){
+			    console.log($.getLoadedModule(),2)
+			});
+			$.require('lang.array',function(){
+			    console.log($.getLoadedModule(),3)
+			});
+			$.require('events.eventbind',function(){
+			    console.log($.getLoadedModule(),4)
+			});
 		</script>
 	</body>
 </html>
