--- a/Mallan_test/photoslide.html
+++ b/Mallan_test/photoslide.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>treeview</title>
-		<meta name="description" content="" />
-		<meta name="author" content="allanma" />
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-	</head>
-	<body>
-		<div id="slide">
-			
+<head>
+<meta charset="utf-8" />
+<style>
+* {
+	margin: 0;
+	padding: 0;
+}
+
+#slide,#slide .pics {
+	width: 515px;
+	height: 300px;
+	overflow: hidden;
+	background-color: red;
+}
+
+img {
+	display: block;
+}
+</style>
+</head>
+<body>
+	<div id="slide">
+		<div class="pics">
+			<div class="picsMove">
+				<img src="/home/mangix/Pictures/1.jpg" width="515" height="300" />
+				<img src="/home/mangix/Pictures/2.jpg" width="515" height="300" />
+				<img src="/home/mangix/Pictures/3.jpg" width="515" height="300" />
+				<img src="/home/mangix/Pictures/4.jpg" width="515" height="300" />
+			</div>
 		</div>
-		<script type="text/javascript">
-		</script>
-	</body>
+		<input type="button" value="pre" class="ps_pre" /> <input
+			type="button" value="next" class="ps_next" />
+	</div>
+	<script type="text/javascript" src="../Mallan.js"></script>
+	<script type="text/javascript">
+        $.require('plugin.photoslide', function() {
+            $('#slide').photoSlide({
+                direction : 'vertical',
+                autoSwitchTime : 5000,
+                perTime : 1,
+                onChanged : function(i) {
+                    console.log(i)
+                },
+                time : 50
+            });
+        });
+    </script>
+</body>
 </html>
