--- a/test/plugin/calendar.html
+++ b/test/plugin/calendar.html
@@ -16,6 +16,7 @@
         var calendar = new $.plugin.calendar({
             dateField:$("input")[0]
         });
+        console.log(calendar._date)
     });
 </script>
 </body>
