--- a/test/plugin/drag.html
+++ b/test/plugin/drag.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+<meta content="text/html; charset=utf-8">
 <head>
     <title></title>
 </head>
 <body>
 <div style="width:100px; height: 100px; background-color: red; cursor: move;"></div>
+<div style="width:100px; height: 100px; background-color: green; cursor: move;"></div>
 <script type="text/javascript" src="../../Mallan.js"></script>
 <script type="text/javascript">
     $.require("plugin.drag", function () {
-        $('div').drag();
+        $('div').drag()
     });
 </script>
 </body>
