--- a/plugin/test_inputs.html
+++ b/plugin/test_inputs.html
@@ -20,7 +20,7 @@
         </script>
         <script type="text/javascript" src="../event/EventBind.js">
         </script>
-        <script type="text/javascript" src="../plugin/inputs.js">
+        <script type="text/javascript" src="placeholder.js">
         </script>
         <script type="text/javascript">
             var i = new $.plugin.Inputs("input", {
