--- a/test/plugin/placehoder.html
+++ b/test/plugin/placehoder.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title></title>
+    <style>
+        input{width: 100px;}
+    </style>
 </head>
 <body>
 <input type="text" id="text"/>
