--- a/test/plugin/placehoder.html
+++ b/test/plugin/placehoder.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <input type="text" id="text"/>
-<input type="password" id="password" />
+<input type="password" id="password" style="border: solid 1px gray;" />
 <script type="text/javascript" src="../../Mallan.js"></script>
 <script type="text/javascript">
     $.require('plugin.placeholder',function(){
