--- a/test/lang/inherit.html
+++ b/test/lang/inherit.html
@@ -11,7 +11,7 @@
     var log = function () {
         console.log(arguments)
     }
-    var SuperClass = $.Class.inherit({
+    var SuperClass = $.lang.Class.inherit({
         init:function () {
             log('an instance of SuperClass created');
         },
