--- a/test/animation/animate.html
+++ b/test/animation/animate.html
@@ -27,6 +27,7 @@
 <script type="text/javascript">
     $.require('animation.animate', function () {
         $('div').animate('border-radius', '100px', 500, function () {
+            console.log('complete')
         });
     });
 </script>
